--- a/main.html
+++ b/main.html
@@ -64,24 +64,26 @@
             </div>
         </div>
         <footer id="footer">
-            <div id="footer_info">
-                <div id="logo"></div>
+            <div id="footer_nav">
+                <div id="logo">
+                    <a href=""><img src="" alt="">Logo </a>
+                </div>
                 <div id="footer_bar">
-                    <nav id="navbar">
-                        <h2> <a href="#" class="logo"> <span>Logo</span> </a> </h2>
-                        <button class="toggle--btn" type="button">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span> </button>
-                    <ul class="nav">
+                    <ul id="nav">
                         <li><a href="#" class="Home">Home</a></li>
                         <li><a href="#" class="Home">About</a></li>
                         <li><a href="#" class="Home">Service</a></li>
                         <li><a href="#" class="Home">Contact</a></li>
                         <li><a href="#" class="Home">Portfolio</a></li>
                     </ul>
-                    <button class="btn" type="button">call me baby</button>
                 </div>
+                <div id="footer_info">
+                    <p>information</p>
+                    <button class="button_header" type="button">Заказать услуги</button>
+                </div>
+            </div>
+            <div id="footer_info">
+                <p>text</p>
             </div>
         </footer>
     </div>
