оформил стили для кнопки "Заказать услуги"

--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
                     <div id="text_gif_Low"><span>В Ярославле и Ярославской области</span></div>
                 </div>
                 <div id="button_gif">
-                    <button type="button">Заказать услуги</button>
+                    <button class="btn_entity" type="button">Заказать услуги</button>
                 </div>
             </div>
             <div id="information">
