добавил еще стилей и анимаций к кнопке "Заказать услуги"

--- a/main.html
+++ b/main.html
@@ -79,7 +79,7 @@
                 </div>
                 <div id="footer_info">
                     <p>information</p>
-                    <button class="button_header" type="button">Заказать услуги</button>
+                    <button class="btn_entity" type="button">Заказать услуги</button>
                 </div>
             </div>
             <div id="footer_info">
