добавил лого в футер и убрал декорацию у списка

--- a/main.html
+++ b/main.html
@@ -65,8 +65,8 @@
         </div>
         <footer id="footer">
             <div id="footer_nav">
-                <div id="logo">
-                    <a href=""><img src="" alt="">Logo </a>
+                <div class="image_logo">
+                    <a href=""><img src="logo.png" alt=""></a>
                 </div>
                 <div id="footer_bar">
                     <ul id="nav">
@@ -78,7 +78,7 @@
                     </ul>
                 </div>
                 <div id="footer_info">
-                    <p>information</p>
+                    <p>number</p>
                     <button class="button_header" type="button">Заказать услуги</button>
                 </div>
             </div>
