добавил дроп меню, обновил карточки
добавил дроп меню в хедер, обновил карточки в боди

--- a/main.html
+++ b/main.html
@@ -14,7 +14,21 @@
             </div>
             <div class="navigation">
                 <ul class="nav">
-                    <li><a href="#" class="navigation_btn">Услуги</a></li>
+                    <!--<li><a href="#" class="navigation_btn">Услуги</a></li>-->
+                    <div class="dropdown">
+                        <button class="dropbtn">Услуги
+                          <i class="fa fa-caret-down"></i>
+                        </button>
+                        <div class="dropdown-content">
+                          <a href="#">Ежедневная уборка коммерческой недвижимости</a>
+                          <a href="#">Уборка прилегающей территории</a>
+                          <a href="#">Мойка окон и витрин</a>
+                          <a href="#">Химчистка мягкой мебели и ковролина</a>
+                        </div>
+                      </div>
+                    
+
+
                     <li><a href="#" class="navigation_btn">Вакансии</a></li>
                     <li><a href="#" class="navigation_btn">Контакты</a></li>
                 </ul>
@@ -45,11 +59,43 @@
             <div id="service">
                 <div id="card_container">
                     <div class="card">
-                        <a href=""><img src="house.png" alt=""></a>
+                        <a href=""><img src="uborka-v-ofise1.jpg" alt=""></a>
                         <div class="info">
-                            <p>Уборка дома</p>
+                            <p>Ежедневная уборка коммерческой недвижимости</p>
                             <p>Стоимость</p>
-                            <button>Заказать услугу!</button>
+                            <div id="button_card">
+                                <button class="btn_entity" type="button">Заказать услуги</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href=""><img src="prileg ter.jpg" alt=""></a>
+                        <div class="info">
+                            <p>Уборка прилегающей территории</p>
+                            <p>Стоимость</p>
+                            <div id="button_card">
+                                <button class="btn_entity" type="button">Заказать услуги</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href=""><img src="myte-stekol-vitrin-okon-v-ofise.jpg" alt=""></a>
+                        <div class="info">
+                            <p>Мойка окон и витрин</p>
+                            <p>Стоимость</p>
+                            <div id="button_card">
+                                <button class="btn_entity" type="button">Заказать услуги</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <a href=""><img src="full_rTBagiDl.jpeg" alt=""></a>
+                        <div class="info">
+                            <p>Химчистка мягкой мебели и ковролина</p>
+                            <p>Стоимость</p>
+                            <div id="button_card">
+                                <button class="btn_entity" type="button">Заказать услуги</button>
+                            </div>
                         </div>
                     </div>
                 </div>
