--- a/main.html
+++ b/main.html
@@ -46,12 +46,13 @@
                 </div>
             </div>
             <div id="information">
-                <h3>Клининговая компания "Clinigger" сделает <span>профессиональную уборку</span> в вашем доме</h3>
+                <h3>Клининговая компания "Clinigger" оказывает <span>оказывает профессиональные клининговые услуги для организаций</span> или ваших домов</h3>
             </div>
             <div id="image_container">
-                <img src="image1.jpg" alt="1">
-                <img src="image1.jpg" alt="2">
-                <img src="image1.jpg" alt="3">
+                <img src="03767DF3-2DB3-49A7-B.jpg" alt="1">
+                <img src="upholstery-cleaning-.jpg" alt="2">
+                <img src="window_cleaning.jpg" alt="3">
+                <img src="41.jpg" alt="4">
             </div>
             <div id="name_services">
                 <h4>Предлагаем полный комплекс услуг <span>по уборке и дезинфекции помещений</span></h4>
@@ -62,7 +63,6 @@
                         <a href=""><img src="uborka-v-ofise1.jpg" alt=""></a>
                         <div class="info">
                             <p>Ежедневная уборка коммерческой недвижимости</p>
-                            <p>Стоимость</p>
                             <div id="button_card">
                                 <button class="btn_entity" type="button">Заказать услуги</button>
                             </div>
@@ -72,7 +72,6 @@
                         <a href=""><img src="prileg ter.jpg" alt=""></a>
                         <div class="info">
                             <p>Уборка прилегающей территории</p>
-                            <p>Стоимость</p>
                             <div id="button_card">
                                 <button class="btn_entity" type="button">Заказать услуги</button>
                             </div>
@@ -82,7 +81,6 @@
                         <a href=""><img src="myte-stekol-vitrin-okon-v-ofise.jpg" alt=""></a>
                         <div class="info">
                             <p>Мойка окон и витрин</p>
-                            <p>Стоимость</p>
                             <div id="button_card">
                                 <button class="btn_entity" type="button">Заказать услуги</button>
                             </div>
@@ -92,7 +90,6 @@
                         <a href=""><img src="full_rTBagiDl.jpeg" alt=""></a>
                         <div class="info">
                             <p>Химчистка мягкой мебели и ковролина</p>
-                            <p>Стоимость</p>
                             <div id="button_card">
                                 <button class="btn_entity" type="button">Заказать услуги</button>
                             </div>
