изменил текст, пофиксил картинки, сделал красивые рамки

--- a/main.html
+++ b/main.html
@@ -42,7 +42,7 @@
                     <div id="text_gif_Low"><span>В Ярославле и Ярославской области</span></div>
                 </div>
                 <div id="button_gif">
-                    <button class="btn_entity" type="button">Заказать услуги</button>
+                    <button class="btn_entity" type="button">Оставить заявку</button>
                 </div>
             </div>
             <div id="information">
@@ -62,7 +62,7 @@
                     <div class="card">
                         <a href=""><img src="uborka-v-ofise1.jpg" alt=""></a>
                         <div class="info">
-                            <p>Ежедневная уборка коммерческой недвижимости</p>
+                            <p>уборка коммерческой недвижимости</p>
                             <div id="button_card">
                                 <button class="btn_entity" type="button">Заказать услуги</button>
                             </div>
@@ -122,7 +122,7 @@
                 </div>
                 <div id="footer_info">
                     <p>number</p>
-                    <button class="btn_entity" type="button">Заказать услуги</button>
+                    <button class="btn_entity" type="button">Оставить заявку</button>
                 </div>
             </div>
             <div id="footer_info">
