--- a/main.html
+++ b/main.html
@@ -48,11 +48,15 @@
             <div id="information">
                 <h3>Клининговая компания "Clinigger" оказывает <span>оказывает профессиональные клининговые услуги для организаций</span> или ваших домов</h3>
             </div>
-            <div id="image_container">
-                <img src="03767DF3-2DB3-49A7-B.jpg" alt="1">
-                <img src="upholstery-cleaning-.jpg" alt="2">
-                <img src="window_cleaning.jpg" alt="3">
-                <img src="41.jpg" alt="4">
+            <div class="slider_container">
+                <div class="slider">
+                    <img src="03767DF3-2DB3-49A7-B.jpg" alt="1">
+                    <img src="upholstery-cleaning-.jpg" alt="2">
+                    <img src="window_cleaning.jpg" alt="3">
+                    <img src="41.jpg" alt="4">
+                </div>
+                <button class="prev_btn" >&lt;</button>
+                <button class="next_btn" >&gt;</button>
             </div>
             <div id="name_services">
                 <h4>Предлагаем полный комплекс услуг <span>по уборке и дезинфекции помещений</span></h4>
@@ -130,5 +134,6 @@
             </div>
         </footer>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
