--- a/main.html
+++ b/main.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <div id = "page">
         <header id = header>
             <div class="image_logo">
-                <a href="#"> <img src="logo.png" alt=""> </a>
+                <a href="#"> <img src="img/logo.png" alt=""> </a>
             </div>
             <div class="navigation">
                 <ul class="nav">
@@ -36,7 +36,7 @@
         </header>
         <div id="main">
             <div id="gif_container">
-                <img id="background_gif" src="clean1.jpg" alt="#">
+                <img id="background_gif" src="img/main_gif.jpg" alt="#">
                 <div id="text_gif">
                     <div id="text_gif_Hight"><span>Клининговые услуги для организаций</span></div>
                     <div id="text_gif_Low"><span>В Ярославле и Ярославской области</span></div>
@@ -50,10 +50,10 @@
             </div>
             <div class="slider_container">
                 <div class="slider">
-                    <img src="03767DF3-2DB3-49A7-B.jpg" alt="1">
-                    <img src="upholstery-cleaning-.jpg" alt="2">
-                    <img src="window_cleaning.jpg" alt="3">
-                    <img src="41.jpg" alt="4">
+                    <img src="img/slider_1.jpg" alt="1">
+                    <img src="img/slider_2.jpg" alt="2">
+                    <img src="img/slider_3.jpg" alt="3">
+                    <img src="img/slider_4.jpg" alt="4">
                 </div>
                 <button class="prev_btn" >&lt;</button>
                 <button class="next_btn" >&gt;</button>
@@ -64,7 +64,7 @@
             <div id="service">
                 <div id="card_container">
                     <div class="card">
-                        <a href=""><img src="uborka-v-ofise1.jpg" alt=""></a>
+                        <a href=""><img src="img/card_img/uborka_v_ofise.jpg" alt=""></a>
                         <div class="info">
                             <p>уборка коммерческой недвижимости</p>
                             <div id="button_card">
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <a href=""><img src="prileg ter.jpg" alt=""></a>
+                        <a href=""><img src="img/card_img/surrounding_areas.jpg" alt=""></a>
                         <div class="info">
                             <p>Уборка прилегающей территории</p>
                             <div id="button_card">
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <a href=""><img src="myte-stekol-vitrin-okon-v-ofise.jpg" alt=""></a>
+                        <a href=""><img src="img/card_img/myte_stekol_v_ofise.jpg" alt=""></a>
                         <div class="info">
                             <p>Мойка окон и витрин</p>
                             <div id="button_card">
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <a href=""><img src="full_rTBagiDl.jpeg" alt=""></a>
+                        <a href=""><img src="img/card_img/Dry_cleaning.jpeg" alt=""></a>
                         <div class="info">
                             <p>Химчистка мягкой мебели и ковролина</p>
                             <div id="button_card">
@@ -113,7 +113,7 @@
         <footer id="footer">
             <div id="footer_nav">
                 <div class="image_logo">
-                    <a href=""><img src="logo.png" alt=""></a>
+                    <a href=""><img src="img/logo.png" alt=""></a>
                 </div>
                 <div id="footer_bar">
                     <ul id="nav">
@@ -134,6 +134,6 @@
             </div>
         </footer>
     </div>
-    <script src="script.js"></script>
+    <script src="script/script.js"></script>
 </body>
 </html>
