--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     <div id = "page">
         <header id = header>
             <div class="image_logo">
-                <a href="#"> <img src="img/logo.png" alt=""> </a>
+                <a href="main.html"> <img src="img/logo.png" alt=""> </a>
             </div>
             <div class="navigation">
                 <ul class="nav">
@@ -20,15 +20,12 @@
                           <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                          <a href="#">Ежедневная уборка коммерческой недвижимости</a>
+                          <a href="page_2.html">Ежедневная уборка коммерческой недвижимости</a>
                           <a href="#">Уборка прилегающей территории</a>
                           <a href="#">Мойка окон и витрин</a>
                           <a href="#">Химчистка мягкой мебели и ковролина</a>
                         </div>
                       </div>
-                    
-
-
                     <li><a href="#" class="navigation_btn">Вакансии</a></li>
                     <li><a href="#" class="navigation_btn">Контакты</a></li>
                 </ul>
@@ -117,7 +114,7 @@
                 </div>
                 <div id="footer_bar">
                     <ul id="nav">
-                        <li><a href="#" class="Home">Home</a></li>
+                        <li><a href="main.html" class="Home">Home</a></li>
                         <li><a href="#" class="Home">About</a></li>
                         <li><a href="#" class="Home">Service</a></li>
                         <li><a href="#" class="Home">Contact</a></li>
