поработал над футером

--- a/main.html
+++ b/main.html
@@ -117,20 +117,15 @@
                 </div>
                 <div id="footer_bar">
                     <ul id="nav">
-                        <li><a href="#" class="Home">Home</a></li>
-                        <li><a href="#" class="Home">About</a></li>
-                        <li><a href="#" class="Home">Service</a></li>
-                        <li><a href="#" class="Home">Contact</a></li>
-                        <li><a href="#" class="Home">Portfolio</a></li>
+                        <li><a href="#" class="Home">Услуги</a></li>
+                        <li><a href="#" class="Home">Вакансии</a></li>
+                        <li><a href="#" class="Home">Контакты</a></li>
                     </ul>
                 </div>
                 <div id="footer_info">
                     <p>number</p>
                     <button class="btn_entity" type="button">Оставить заявку</button>
                 </div>
-            </div>
-            <div id="footer_info">
-                <p>text</p>
             </div>
         </footer>
     </div>
