--- a/main.html
+++ b/main.html
@@ -50,8 +50,11 @@
                         <div id="text_Menu_Hight"><span>Оставьте свои контактные данные</span></div><br>
                         <div id="text_Menu_Low"><span>Менеджер перезвонит вам как можно скорее в рабочее время, <br>
                         проконсультирует по услугам и составит точный расчет стоимости работ.</span></div> <br>
-                        <input type="text" id="name" placeholder="Введите ваше Имя" required><br>
-                        <input type="tel" id="phone" placeholder="Введите ваш телефон" required><br>
+
+                        <form id="myForm" action="http://localhost:3000/submitForm" method="post"></form>
+
+                        <input type="text" id="name" name="name" placeholder="Введите ваше Имя" required><br>
+                        <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" required><br>
                         <button class="btn_entity" type="button" onclick="submitForm()">Отправить</button>
                     </div>
                 </div>
@@ -90,8 +93,11 @@
                                     <div id="text_Menu_Hight"><span>Оставьте свои контактные данные</span></div><br>
                                     <div id="text_Menu_Low"><span>Менеджер перезвонит вам как можно скорее в рабочее время, <br>
                                     проконсультирует по услугам и составит точный расчет стоимости работ.</span></div> <br>
-                                    <input type="text" id="name" placeholder="Введите ваше Имя" required><br>
-                                    <input type="tel" id="phone" placeholder="Введите ваш телефон" required><br>
+
+                                    <form id="myForm" action="http://localhost:3000/submitForm" method="post"></form>
+
+                                    <input type="text" id="name" name="name" placeholder="Введите ваше Имя" required><br>
+                                    <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" required><br>
                                     <button class="btn_entity" type="button" onclick="submitForm()">Отправить</button>
                                 </div>
                             </div>
@@ -113,8 +119,11 @@
                                     <div id="text_Menu_Hight"><span>Оставьте свои контактные данные</span></div><br>
                                     <div id="text_Menu_Low"><span>Менеджер перезвонит вам как можно скорее в рабочее время, <br>
                                     проконсультирует по услугам и составит точный расчет стоимости работ.</span></div> <br>
-                                    <input type="text" id="name" placeholder="Введите ваше Имя" required><br>
-                                    <input type="tel" id="phone" placeholder="Введите ваш телефон" required><br>
+
+                                    <form id="myForm" action="http://localhost:3000/submitForm" method="post"></form>
+
+                                    <input type="text" id="name" name="name" placeholder="Введите ваше Имя" required><br>
+                                    <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" required><br>
                                     <button class="btn_entity" type="button" onclick="submitForm()">Отправить</button>
                                 </div>
                             </div>
@@ -134,10 +143,13 @@
                             <div id="menuOverlay" onclick="hideMenu()">
                                 <div id="menuContent" onclick="event.stopPropagation();">
                                     <div id="text_Menu_Hight"><span>Оставьте свои контактные данные</span></div><br>
-                                    <div id="text_Menu_Low"><span>Менеджер перезвонит вам как можно скорее в рабочее время, <br>
+                                    <div id="text_Menu_Low"><span>Менеджер перезвонит вам как можно скорее в рабочее время,<br>
                                     проконсультирует по услугам и составит точный расчет стоимости работ.</span></div> <br>
-                                    <input type="text" id="name" placeholder="Введите ваше Имя" required><br>
-                                    <input type="tel" id="phone" placeholder="Введите ваш телефон" required><br>
+
+                                    <form id="myForm" action="http://localhost:3000/submitForm" method="post"></form>
+
+                                    <input type="text" id="name" name="name" placeholder="Введите ваше Имя" required><br>
+                                    <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" required><br>
                                     <button class="btn_entity" type="button" onclick="submitForm()">Отправить</button>
                                 </div>
                             </div>
@@ -159,8 +171,11 @@
                                     <div id="text_Menu_Hight"><span>Оставьте свои контактные данные</span></div><br>
                                     <div id="text_Menu_Low"><span>Менеджер перезвонит вам как можно скорее в рабочее время, <br>
                                     проконсультирует по услугам и составит точный расчет стоимости работ.</span></div> <br>
-                                    <input type="text" id="name" placeholder="Введите ваше Имя" required><br>
-                                    <input type="tel" id="phone" placeholder="Введите ваш телефон" required><br>
+
+                                    <form id="myForm" action="http://localhost:3000/submitForm" method="post"></form>
+
+                                    <input type="text" id="name" name="name" placeholder="Введите ваше Имя" required><br>
+                                    <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" required><br>
                                     <button class="btn_entity" type="button" onclick="submitForm()">Отправить</button>
                                 </div>
                             </div>
@@ -205,8 +220,11 @@
                             <div id="text_Menu_Hight"><span>Оставьте свои контактные данные</span></div><br>
                             <div id="text_Menu_Low"><span>Менеджер перезвонит вам как можно скорее в рабочее время, <br>
                             проконсультирует по услугам и составит точный расчет стоимости работ.</span></div> <br>
-                            <input type="text" id="name" placeholder="Введите ваше Имя" required><br>
-                            <input type="tel" id="phone" placeholder="Введите ваш телефон" required><br>
+
+                            <form id="myForm" action="http://localhost:3000/submitForm" method="post"></form>
+
+                            <input type="text" id="name" name="name" placeholder="Введите ваше Имя" required><br>
+                            <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" required><br>
                             <button class="btn_entity" type="button" onclick="submitForm()">Отправить</button>
                         </div>
                     </div>                    
