--- a/main.html
+++ b/main.html
@@ -34,14 +34,12 @@
         </header>
         <div id="main">
             <div id="gif_container">
-                
                 <img id="background_gif" src="img/main_gif_dark.jpg" alt="#">
-                
-                <div id="overlay_gif">
-                    <div class="text_gif">
-                        <div id="text_gif_Hight"><span >Клининговые услуги для организаций</span></div>
-                        <div id="text_gif_Low"><span >В Ярославле и Ярославской области</span></div>
-                    </div>
+                <div class="text_gif">
+                    <div id="text_gif_Hight"><span >Клининговые услуги для организаций</span></div>
+                    <div id="text_gif_Low"><span >В Ярославле и Ярославской области</span></div>
+                </div>
+                <div class="button_gif">
                     <button class="btn_entity" type="button" onclick="showMenu()">Оставить заявку</button>
                 </div>
                 <!--тут у нас всплывающая при нажатии форма-->
@@ -56,7 +54,6 @@
                             <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" required><br>
                             <button class="btn_entity" type="button" onclick="submitForm()">Отправить</button>
                         </form>
-
                     </div>
                 </div>
             </div>
