обновил путь гиф

--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
         </header>
         <main id="main">
             <div id="gif_container">
-                <img id="background_gif" src="img/main_gif_dark.jpg" alt="#">
+                <img id="background_gif" src="img/back_img/main_gif.jpg" alt="#">
                 <div class="text_gif">
                     <div id="text_gif_Hight"><span >Клининговые услуги для организаций</span></div>
                     <div id="text_gif_Low"><span >В Ярославле и Ярославской области</span></div>
@@ -62,10 +62,10 @@
             </div>
             <div class="slider_container">
                 <div class="slider">
-                    <img src="img/slider_1dop.jpg" alt="1">
-                    <img src="img/slider_2.jpg" alt="2">
-                    <img src="img/slider_3.jpg" alt="3">
-                    <img src="img/slider_4.jpg" alt="4">
+                    <img src="img/slider_img/slider_1dop.jpg" alt="1">
+                    <img src="img/slider_img/slider_2.jpg" alt="2">
+                    <img src="img/slider_img/slider_3.jpg" alt="3">
+                    <img src="img/slider_img/slider_4.jpg" alt="4">
                 </div>
                 <button class="prev_btn" >&lt;</button>
                 <button class="next_btn" >&gt;</button>
