--- a/main.html
+++ b/main.html
@@ -197,13 +197,13 @@
                     <!-- Форма для отправки нового отзыва -->
 
                     <input type="text" id="username" placeholder="Ваше имя" required>
-                    <textarea id="review_comment" placeholder="Ваш отзыв" required></textarea>
+                    <textarea  input type="text" id="review_comment" placeholder="Ваш отзыв" required></textarea>
                     <div class="rating" data-total-value="0">
-                        <div class="rating_item" data-item-value="5">★</div>
-                        <div class="rating_item" data-item-value="4">★</div>
-                        <div class="rating_item" data-item-value="3">★</div>
-                        <div class="rating_item" data-item-value="2">★</div>
-                        <div class="rating_item" data-item-value="1">★</div>
+                        <div class="rating_item" data-item-value="5" onclick="handleRatingClick(this)">★</div>
+                        <div class="rating_item" data-item-value="4" onclick="handleRatingClick(this)">★</div>
+                        <div class="rating_item" data-item-value="3" onclick="handleRatingClick(this)">★</div>
+                        <div class="rating_item" data-item-value="2" onclick="handleRatingClick(this)">★</div>
+                        <div class="rating_item" data-item-value="1" onclick="handleRatingClick(this)">★</div>
                     </div>
                     <button type="submit" id="submit-review" onclick="submitReview()">Отправить отзыв</button>
                 </form>
