добавил другие страницы и настроил маршруты

--- a/page_2.html
+++ b/page_2.html
@@ -23,9 +23,9 @@
                         </button>
                         <div class="dropdown-content">
                           <a href="page_2.html">Ежедневная уборка коммерческой недвижимости</a>
-                          <a href="#">Уборка прилегающей территории</a>
-                          <a href="#">Мойка окон и витрин</a>
-                          <a href="#">Химчистка мягкой мебели и ковролина</a>
+                          <a href="page_3.html">Уборка прилегающей территории</a>
+                          <a href="page_4.html">Мойка окон и витрин</a>
+                          <a href="page_5.html">Химчистка мягкой мебели и ковролина</a>
                         </div>
                       </div>
                     <li><a href="#" class="navigation_btn">Вакансии</a></li>
@@ -124,7 +124,7 @@
                 <div id="card_container">
                     
                     <div class="card">
-                        <a href=""><img src="img/card_img/surrounding_areas.jpg" alt=""></a>
+                        <a href="page_3.html"><img src="img/card_img/surrounding_areas.jpg" alt=""></a>
                         <div class="info">
                             <p>Уборка прилегающей территории</p>
                             <!--тут у нас всплывающая при нажатии форма-->
@@ -148,7 +148,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <a href=""><img src="img/card_img/myte_stekol_v_ofise.jpg" alt=""></a>
+                        <a href="page_4.html"><img src="img/card_img/myte_stekol_v_ofise.jpg" alt=""></a>
                         <div class="info">
                             <p>Мойка окон и витрин</p>
                             <!--тут у нас всплывающая при нажатии форма-->
@@ -172,7 +172,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <a href=""><img src="img/card_img/Dry_cleaning.jpeg" alt=""></a>
+                        <a href="page_5.html"><img src="img/card_img/Dry_cleaning.jpeg" alt=""></a>
                         <div class="info">
                             <p>Химчистка мягкой мебели и ковролина</p>
                             <!--тут у нас всплывающая при нажатии форма-->
