добавил новые фото изменил информацию на страницах

--- a/page_4.html
+++ b/page_4.html
@@ -67,24 +67,29 @@
                         <th>Цена, руб</th>
                     </tr>
                     <tr>
-                        <td>Ежедневная уборка помещений до 200 м2</td>
-                        <td>м2/рабочая смена</td>
-                        <td>от 9 до 12 руб.</td>
+                        <td>Мойка стандартного одностворчатого окна (с двух сторон)</td>
+                        <td>шт.</td>
+                        <td>от 350 до 500 руб.</td>
                     </tr>
                     <tr>
-                        <td>Ежедневная уборка помещений от 200 до 400 м2</td>
-                        <td>м2/рабочая смена</td>
-                        <td>от 8 до 11 руб.</td>
+                        <td>Мойка стандартного двухстворчатого окна (с двух сторон)</td>
+                        <td>шт.</td>
+                        <td>от 400 до 600 руб.</td>
                     </tr>
                     <tr>
-                        <td>Ежедневная уборка помещений от 400 до 700 м2</td>
-                        <td>м2/рабочая смена</td>
-                        <td>от 7 до 10 руб.</td>
+                        <td>Сезонная мойка витражных окон, витрин (с двух сторон)</td>
+                        <td>м2</td>
+                        <td>от 120 до 220 руб.</td>
                     </tr>
                     <tr>
-                        <td>Ежедневная уборка помещений от 700 м2 и более</td>
-                        <td>м2/рабочая смена</td>
-                        <td>от 5 до 8 руб.</td>
+                        <td>Сезонная мойка офисных/нестандартных окон (с двух сторон)</td>
+                        <td>м2</td>
+                        <td>от 150 до 270 руб.</td>
+                    </tr>
+                    <tr>
+                        <td>Мытьё труднодоступных окон (с двух сторон) с применением туры (вышки)</td>
+                        <td>м2</td>
+                        <td>от 250 до 400 руб.</td>
                     </tr>
                 </table>
             </div>
@@ -93,16 +98,16 @@
                 <div class="results_gallery">
                     
                     <div class="result_item">
-                        <img src="/img/result_gallery/1_first.jpg" alt="Описание работы">
+                        <img src="/img/result_gallery/okna.jpg" alt="Описание работы">
                     </div>
                     <div class="result_item">
-                        <img src="/img/result_gallery/2_second.jpg" alt="Описание работы">
+                        <img src="/img/result_gallery/okna_2.jpg" alt="Описание работы">
                     </div>
                     <div class="result_item">
-                        <img src="/img/result_gallery/3_third.jpg" alt="Описание работы">
+                        <img src="/img/result_gallery/okna_3.jpg" alt="Описание работы">
                     </div>
                     <div class="result_item">
-                        <img src="/img/result_gallery/4_four.jpg" alt="Описание работы">
+                        <img src="/img/result_gallery/okna_4.jpg" alt="Описание работы">
                     </div>
                     
                 </div>
