--- a/main.html
+++ b/main.html
@@ -208,8 +208,7 @@
                     <button type="submit" id="submit-review" onclick="submitReview()">Отправить отзыв</button>
                 </form>
             </div>
-            
-        </div>
+        </main>
         <footer id="footer">
             <div id="footer_nav">
                 <div class="image_logo">
