теперь отзывы высвечиваются

--- a/main.html
+++ b/main.html
@@ -183,12 +183,12 @@
                     <!-- Контейнер для отзывов -->
                     <div class="review">
                         <div class="user_info">
-                            <p>Имя пользователя</p>
+                            
                         </div>
                         <div class="user_rating">
-                            <span class="rating_stars">★★★★☆</span>
+                            <span class="rating_stars"></span>
                         </div>
-                        <p class="comment">Текст отзыва...</p>
+                        <p class="comment"></p>
                     </div>
                     <!-- Другие отзывы могут быть добавлены здесь -->
                 </div>
