теперь особенная форма на других страницах работает

--- a/page_4.html
+++ b/page_4.html
@@ -110,10 +110,10 @@
             <div class="contact_form_container">
                 <h3>Заинтересованы в этой услуге?</h3>
                 <p>Заполните форму и один из наших экспертов свяжется с вами в рабочее время, чтобы обсудить условия</p>
-                <form id="myForm" action="/submitForm" method="post" class="contact_form">
-                    <input type="text" id="name" name="name" placeholder="Ваше имя" required>
-                    <input type="tel" id="phone" name="phone" placeholder="Ваш телефон" required>
-                    <button type="button" class="btn_entity" onclick="submitForm()">Отправить</button>
+                <form id="myForm2" action="/submitForm" method="post" class="contact_form">
+                    <input type="text" id="name2" name="name" placeholder="Ваше имя" required>
+                    <input type="tel" id="phone2" name="phone" placeholder="Ваш телефон" required>
+                    <button class="btn_entity" type="button" onclick="SubmitForm()">Отправить</button>
                 </form>
                 <a href="">Нажимая на кнопку «Отправить», я даю согласие на обработку персональных данных</a>
             </div>
@@ -236,7 +236,7 @@
     </div>
 
     <script src="script/script.js"></script>
-    <script src="script/app.js"></script>
+    <script src="script/scriptPage2.js"></script>
     <script src="script/ratingStarScript.js"></script>
 </body>
 </html>
