--- a/main.html
+++ b/main.html
@@ -90,11 +90,11 @@
                                     <div id="text_Menu_Low"><span>Менеджер перезвонит вам как можно скорее в рабочее время, <br>
                                     проконсультирует по услугам и составит точный расчет стоимости работ.</span></div> <br>
 
-                                    <form id="myForm" action="http://localhost:3000/main.html/submitForm" method="post"></form>
-
-                                    <input type="text" id="name" name="name" placeholder="Введите ваше Имя" required><br>
-                                    <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" required><br>
-                                    <button class="btn_entity" type="button" onclick="submitForm()">Отправить</button>
+                                    <form id="myForm" action="/submitForm" method="post">
+                                        <input type="text" id="name" name="name" placeholder="Введите ваше Имя" required><br>
+                                        <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" required><br>
+                                        <button class="btn_entity" type="button" onclick="submitForm()">Отправить</button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -114,11 +114,11 @@
                                     <div id="text_Menu_Low"><span>Менеджер перезвонит вам как можно скорее в рабочее время, <br>
                                     проконсультирует по услугам и составит точный расчет стоимости работ.</span></div> <br>
 
-                                    <form id="myForm" action="/submitForm" method="post"></form>
-
-                                    <input type="text" id="name" name="name" placeholder="Введите ваше Имя" required><br>
-                                    <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" required><br>
-                                    <button class="btn_entity" type="button" onclick="submitForm()">Отправить</button>
+                                    <form id="myForm" action="/submitForm" method="post">
+                                        <input type="text" id="name" name="name" placeholder="Введите ваше Имя" required><br>
+                                        <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" required><br>
+                                        <button class="btn_entity" type="button" onclick="submitForm()">Отправить</button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -138,11 +138,11 @@
                                     <div id="text_Menu_Low"><span>Менеджер перезвонит вам как можно скорее в рабочее время,<br>
                                     проконсультирует по услугам и составит точный расчет стоимости работ.</span></div> <br>
 
-                                    <form id="myForm" action="http://localhost:3000/submitForm" method="post"></form>
-
-                                    <input type="text" id="name" name="name" placeholder="Введите ваше Имя" required><br>
-                                    <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" required><br>
-                                    <button class="btn_entity" type="button" onclick="submitForm()">Отправить</button>
+                                    <form id="myForm" action="/submitForm" method="post">
+                                        <input type="text" id="name" name="name" placeholder="Введите ваше Имя" required><br>
+                                        <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" required><br>
+                                        <button class="btn_entity" type="button" onclick="submitForm()">Отправить</button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -162,11 +162,11 @@
                                     <div id="text_Menu_Low"><span>Менеджер перезвонит вам как можно скорее в рабочее время, <br>
                                     проконсультирует по услугам и составит точный расчет стоимости работ.</span></div> <br>
 
-                                    <form id="myForm" action="http://localhost:3000/submitForm" method="post"></form>
-
-                                    <input type="text" id="name" name="name" placeholder="Введите ваше Имя" required><br>
-                                    <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" required><br>
-                                    <button class="btn_entity" type="button" onclick="submitForm()">Отправить</button>
+                                    <form id="myForm" action="/submitForm" method="post">
+                                        <input type="text" id="name" name="name" placeholder="Введите ваше Имя" required><br>
+                                        <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" required><br>
+                                        <button class="btn_entity" type="button" onclick="submitForm()">Отправить</button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
@@ -236,11 +236,11 @@
                             <div id="text_Menu_Low"><span>Менеджер перезвонит вам как можно скорее в рабочее время, <br>
                             проконсультирует по услугам и составит точный расчет стоимости работ.</span></div> <br>
 
-                            <form id="myForm" action="http://localhost:3000/submitForm" method="post"></form>
-
-                            <input type="text" id="name" name="name" placeholder="Введите ваше Имя" required><br>
-                            <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" required><br>
-                            <button class="btn_entity" type="button" onclick="submitForm()">Отправить</button>
+                            <form id="myForm" action="/submitForm" method="post">
+                                <input type="text" id="name" name="name" placeholder="Введите ваше Имя" required><br>
+                                <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" required><br>
+                                <button class="btn_entity" type="button" onclick="submitForm()">Отправить</button>
+                            </form>
                         </div>
                     </div>                    
                 </div>
