доработал адаптацию к новой нав панели

--- a/page_2.html
+++ b/page_2.html
@@ -14,7 +14,7 @@
             <div class="image_logo">
                 <a href="main.html"><img src="img/logo.png" alt="Логотип"></a>
             </div>
-            <div class="navigation" id="navigation">
+            <div class="navigation">
                 <div class="dropdown">
                     <a href="#" class="dropdown_link">Услуги</a>
                     <div class="dropdown-content">
@@ -26,10 +26,20 @@
                 </div>
                 <a href="vacancies.html">Вакансии</a>
                 <a href="contacts.html">Контакты</a>
-            
-                <button class="toggle-button" id="toggle-button">
-                    <i class="fa fa-bars"></i>
-                </button>
+            </div>
+            <button class="toggle-button">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <div class="drop_navigation">
+                <p>Услуги:</p>
+                <a href="page_2.html" class="drop_navigation_service">Ежедневная уборка коммерческой недвижимости</a>
+                <a href="page_3.html"class="drop_navigation_service">Уборка прилегающей территории</a>
+                <a href="page_4.html"class="drop_navigation_service">Мойка окон и витрин</a>
+                <a href="page_5.html"class="drop_navigation_service">Химчистка мягкой мебели и ковролина</a>
+                <a href="vacancies.html">Вакансии</a>
+                <a href="contacts.html">Контакты</a>
             </div>
         </header>
         <main id="main">
@@ -235,7 +245,7 @@
             </div>
         </footer>
     </div>
-
+    <script src="script/drop_navigation.js"></script>
     <script src="script/script.js"></script>
     <script src="script/app.js"></script>
     <script src="script/ratingStarScript.js"></script>
