--- a/main.html
+++ b/main.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clinigger servise</title>
     <link rel="stylesheet" href="style/style.css">
-
 </head>
 <body>
-    <div id = "page">
+    <div class = "page">
         <header id="header">
             <div class="image_logo">
                 <a href="main.html"><img src="img/logo.png" alt="Логотип"></a>
             </div>
-            <div class="navigation" id="navigation">
+            <div class="navigation">
                 <div class="dropdown">
                     <a href="#" class="dropdown_link">Услуги</a>
                     <div class="dropdown-content">
@@ -25,10 +24,20 @@
                 </div>
                 <a href="vacancies.html">Вакансии</a>
                 <a href="contacts.html">Контакты</a>
-            
-                <button class="toggle-button" id="toggle-button">
-                    <i class="fa fa-bars"></i>
-                </button>
+            </div>
+            <button class="toggle-button">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <div class="drop_navigation">
+                <p>Услуги:</p>
+                <a href="page_2.html" class="drop_navigation_service">Ежедневная уборка коммерческой недвижимости</a>
+                <a href="page_3.html"class="drop_navigation_service">Уборка прилегающей территории</a>
+                <a href="page_4.html"class="drop_navigation_service">Мойка окон и витрин</a>
+                <a href="page_5.html"class="drop_navigation_service">Химчистка мягкой мебели и ковролина</a>
+                <a href="vacancies.html">Вакансии</a>
+                <a href="contacts.html">Контакты</a>
             </div>
         </header>
         <main id="main">
@@ -172,11 +181,9 @@
                     </div>
                 </div>
             </div>
-
             <div class="reviews_header">
             <h2>Отзывы наших <span>клиентов</span></h2>
             </div>
-            
             <div class="reviews_wrapper">
                 <div class="reviews_list">
                     <!-- Контейнер для отзывов -->
@@ -247,8 +254,8 @@
         </footer>
     </div>
 
+    <script src="script/drop_navigation.js"></script>
     <script src="script/script.js"></script>
-    <!-- <script src="script/app.js"></script> -->
     <script src="script/ratingStarScript.js"></script>
     <script src="script/nav_panel.js"></script>
 </body>
