поправил кнопку для карточки 4

--- a/main.html
+++ b/main.html
@@ -106,7 +106,7 @@
                     </div>
                     <div class="card">
                         <a href="page_4.html"><img src="img/card_img/myte_stekol_v_ofise.jpg" alt=""></a>
-                        <div class="info">
+                        <div class="info" id="card4">
                             <p>Мойка окон и витрин</p> 
                             <div id="button_card">
                                 <button class="btn_entity" type="button" onclick="showMenu()">Заказать услуги</button>
