поменял отзывы на мобилке и сделал функцию скрытия услуг

--- a/main.html
+++ b/main.html
@@ -81,6 +81,7 @@
                 <h4>Предлагаем полный комплекс услуг <span>по уборке и дезинфекции помещений</span></h4>
             </div>
             <div id="service">
+                <button class="hideCardsButton" onclick="toggleCards()">Скрыть услуги</button>
                 <div id="card_container">
                     <div class="card">
                         <a href="page_2.html"><img src="img/card_img/uborka_v_ofise.jpg" alt=""></a>
@@ -179,6 +180,7 @@
         </footer>
     </div>
 
+    <script src="script/hideAllCards.js"></script>
     <script src="script/drop_navigation.js"></script>
     <script src="script/script.js"></script>
     <script src="script/ratingStarScript.js"></script>
