добавил кнопку скрытия на другие страницы и добавил медиа чтобы фото уменьшались

--- a/page_2.html
+++ b/page_2.html
@@ -129,6 +129,7 @@
                 <h4>Также ознакомтесь с другими услугами, которые мы предоставляем!</h4>
             </div>
             <div id="service">
+                <button class="hideCardsButton" onclick="toggleCards()">Скрыть услуги</button>
                 <div id="card_container">
                     <div class="card">
                         <a href="page_3.html"><img src="img/card_img/surrounding_areas.jpg" alt=""></a>
@@ -187,6 +188,7 @@
             </div>
         </footer>
     </div>
+    <script src="script/hideAllCards.js"></script>
     <script src="script/drop_navigation.js"></script>
     <script src="script/script.js"></script>
     <script src="script/scriptPage2.js"></script>
