--- a/page_3.html
+++ b/page_3.html
@@ -140,6 +140,7 @@
                 <h4>Также ознакомтесь с другими услугами, которые мы предоставляем!</h4>
             </div>
             <div id="service">
+                <button class="hideCardsButton" onclick="toggleCards()">Скрыть услуги</button>
                 <div id="card_container">
                     <div class="card">
                         <a href="page_2.html"><img src="img/card_img/uborka_v_ofise.jpg" alt=""></a>
@@ -198,6 +199,7 @@
             </div>
         </footer>
     </div>
+    <script src="script/hideAllCards.js"></script>
     <script src="script/drop_navigation.js"></script>
     <script src="script/script.js"></script>
     <script src="script/scriptPage2.js"></script>
