доработал формы и добавил крестик

--- a/main.html
+++ b/main.html
@@ -52,6 +52,7 @@
                 </div>
                 <div id="menuOverlay" onclick="hideMenu()">
                     <div id="menuContent" onclick="event.stopPropagation();">
+                        <span id="closeButton" onclick="hideMenu()">✖</span>
                         <div id="text_Menu_Hight"><span>Оставьте свои контактные данные</span></div><br>
                         <div id="text_Menu_Low"><span>Менеджер перезвонит вам как можно скорее в рабочее время, <br>
                         проконсультирует по услугам и составит точный расчет стоимости работ.</span></div> <br>
