--- a/main.html
+++ b/main.html
@@ -59,7 +59,7 @@
 
                         <form id="myForm" action="/submitForm" method="post">
                             <input type="text" id="name" name="name" placeholder="Введите ваше Имя" required=""><br>
-                            <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" required=""><br>
+                            <input type="tel" id="phone" name="phone" placeholder="Введите ваш телефон" pattern="[0-9]+" title="Телефон должен содержать только цифры" required><br>
                             <button class="btn_entity" type="button" onclick="submitForm()">Отправить</button>
                         </form>
                     </div>
@@ -144,7 +144,7 @@
                         <p class="comment"></p>
                     </div>
                 </div>
-                <form id="review_form" action="http://localhost:5000/submit-review" method="post">
+                <form id="review_form" action="http://localhost:5000/submit-review" method="POST">
                     <h3>Оставьте отзыв!</h3>
                     <input type="text" id="username" placeholder="Ваше имя" required>
                     <textarea  input type="text" id="review_comment" placeholder="Ваш отзыв" required></textarea>
